k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: youtube-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: youtube-tracker
  template:
    metadata:
      labels:
        app: youtube-tracker
    spec:
      containers:
        - name: youtube-tracker
          image: ghcr.io/sergey-podunov/youtube_tracker:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: auth-token
              mountPath: /app/auth
              readOnly: true
      imagePullSecrets:
        - name: ghcr-secret
      volumes:
        - name: auth-token
          secret:
            secretName: google-auth-token
