k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: youtube-tracker
spec:
  type: ClusterIP
  selector:
    app: youtube-tracker
  ports:
    - port: 8080
      targetPort: 8080
